--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">GetGoProject</string>
     <string name="title_activity_maps">MapsActivity</string>
+    <string name="image_desc">image</string>
 </resources>
