Add google authentication

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
         User Content: You are responsible for any content you upload or create on the application. You agree not to post content that violates the law or the rights of others.
     </string>
     <string name="image_desc">image</string>
+
+    <string name="Client_ID">454090277244-5ovsnvd9o4adbt66dq7ouv5qfv8d68b6.apps.googleusercontent.com</string>
 </resources>
