add facebook page to support, add payment method

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
         User Content: You are responsible for any content you upload or create on the application. You agree not to post content that violates the law or the rights of others.
     </string>
     <string name="image_desc">image</string>
+    <string name="facebook_page_url">https://www.facebook.com/GetyourplanGoexplore</string>
 </resources>
